Gestion de l'entête

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+/* Importing Bootstrap SCSS file. */
+@use 'bootstrap/scss/bootstrap';
+
+@font-face {
+    font-family: 'Neoneon';
+    src: url('../public/fonts/Neoneon.otf') format('opentype');
+}
